syntax = "proto3";

package services.provider.v1;

option csharp_namespace = "Trinsic.Services.Provider.V1";
option go_package = "github.com/trinsic-id/sdk";
option java_package = "trinsic.services.common.v1";

import "services/common/v1/common.proto";

message Invite {
    string id = 1;
    string code = 2;
    string created = 3;
    string accepted = 4;
    string expires = 5;
}

message InviteRequest {
    ParticipantType participant = 1;
    string description = 2;
    oneof contact_method {
        string email = 5;
        string phone = 6;
        DidCommInvitation didcomm_invitation = 7;
    }

    message DidCommInvitation {}
}
enum ParticipantType {
    participant_type_individual = 0;
    participant_type_organization = 1;
}

message InviteResponse {
    services.common.v1.ResponseStatus status = 1;

    string invitation_id = 10;
}

// Request details for the status of onboarding
// an individual or organization.
// The referenece_id passed is the response from the
// `Onboard` method call
message InvitationStatusRequest {
    string invitation_id = 1;
}

message InvitationStatusResponse {
    enum Status {
        // Onboarding resulted in error
        Error = 0;

        // The participant has been invited
        InvitationSent = 1;

        // The participant has been onboarded
        Completed = 2;

        // The invite has expired
        Expired = 3;
    }

    Status status = 1;
    string status_details = 2;
}

message Ecosystem {
    string id = 1;
    string name = 2;
    string description = 3;
    string uri = 4;
}

message CreateEcosystemRequest {
    string name = 1;
    string description = 2;
    string uri = 3;
}

message CreateEcosystemResponse {
    string id = 1;
}

message AcceptInviteRequest {
    string id = 1;
    string code = 2;
}

message AcceptInviteResponse {
    Ecosystem ecosystem = 2;
}

service Provider {
  rpc CreateEcosystem(CreateEcosystemRequest) returns (CreateEcosystemResponse);

  // Invite a user to the ecosystem
  rpc Invite(InviteRequest) returns (InviteResponse);

  // Accept an invite to the ecosystem
  rpc AcceptInvite(AcceptInviteRequest) returns (AcceptInviteResponse);

  rpc InviteWithWorkflow(InviteRequest) returns (InviteResponse);
  
  rpc InvitationStatus(InvitationStatusRequest) returns (InvitationStatusResponse);
}